исправил ошибки от ревьюера