@@ -1,20 +1,20 @@
-package TaskManagers;
+package taskManagers;
 
-import Tasks.Task;
+import tasks.Task;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.LinkedList;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-     private final List<Task> taskHistory = new ArrayList<>();
+    private final LinkedList<Task> taskHistory = new LinkedList<>();
 
     @Override
     public void add(Task task) {
         Task taskForHistory = new Task(task.getId(), task.getName(), task.getDescription(), task.getTaskStatus());
         if (taskHistory.size() >= 10) {
-            taskHistory.add(0, taskForHistory);
-            taskHistory.remove(taskHistory.size() - 1);
+            taskHistory.removeFirst();
+            taskHistory.add(taskForHistory);
         } else {
             taskHistory.add(taskForHistory);
         }
